[gd_scene load_steps=25 format=3 uid="uid://by2h4tfaplgq2"]

[ext_resource type="Script" uid="uid://cslt4kru0f22q" path="res://Scenes/Boss/Boss.gd" id="1_emfxe"]
[ext_resource type="Texture2D" uid="uid://dmm1neu1pk4be" path="res://assets/enemies/boss/boss.png" id="1_qg2l1"]
[ext_resource type="PackedScene" uid="uid://wvf275ofp1tt" path="res://Scenes/Shooter/shooter.tscn" id="3_emfxe"]
[ext_resource type="AudioStream" uid="uid://dw460k6xgi80c" path="res://assets/sound/boss_arrive.wav" id="4_u1fj0"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qg2l1"]
radius = 24.0
height = 64.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qg2l1"]
size = Vector2(20, 737)

[sub_resource type="Animation" id="Animation_f2ymq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_qg2l1"]
resource_name = "arrive"
length = 0.7
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0.5, 0.5)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.7),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_enable_hitbox"
}]
}

[sub_resource type="Animation" id="Animation_8cuti"]
resource_name = "attack"
length = 2.0
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.8, 1.5, 1.8, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-120, 0), Vector2(-120, 0), Vector2(0, -150), Vector2(0, -150), Vector2(0, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.65),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_shoot"
}]
}

[sub_resource type="Animation" id="Animation_emfxe"]
resource_name = "hit"
length = 2.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 0.611765), Color(1, 0, 0, 0.611765), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 0.611765), Color(1, 0, 0, 0.611765), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 0.611765), Color(1, 0, 0, 0.611765), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 0.611765), Color(1, 0, 0, 0.611765), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 0.611765), Color(1, 0, 0, 0.611765), Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [false],
"method": &"_set_invincible"
}]
}

[sub_resource type="Animation" id="Animation_u1fj0"]
resource_name = "pulse"
length = 3.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -150), Vector2(0, 0), Vector2(0, -150), Vector2(0, 0), Vector2(0, -150), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f2ymq"]
_data = {
&"RESET": SubResource("Animation_f2ymq"),
&"arrive": SubResource("Animation_qg2l1"),
&"attack": SubResource("Animation_8cuti"),
&"hit": SubResource("Animation_emfxe"),
&"pulse": SubResource("Animation_u1fj0")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_emfxe"]
animation = &"RESET"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_u1fj0"]
animation = &"arrive"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8cuti"]
animation = &"attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jru1c"]
animation = &"hit"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_bmtw7"]
animation = &"pulse"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_u1fj0"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_emfxe"]
advance_mode = 2
advance_condition = &"on_trigger"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8cuti"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bmtw7"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_jru1c"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_l8t4p"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_emfxe"]
states/RESET/node = SubResource("AnimationNodeAnimation_emfxe")
states/RESET/position = Vector2(312, 100)
states/Start/position = Vector2(162, 98.75)
states/arrive/node = SubResource("AnimationNodeAnimation_u1fj0")
states/arrive/position = Vector2(473, 100.188)
states/attack/node = SubResource("AnimationNodeAnimation_8cuti")
states/attack/position = Vector2(663.5, 197.5)
states/hit/node = SubResource("AnimationNodeAnimation_jru1c")
states/hit/position = Vector2(473.5, 198)
states/pulse/node = SubResource("AnimationNodeAnimation_bmtw7")
states/pulse/position = Vector2(664, 99.6875)
transitions = ["Start", "RESET", SubResource("AnimationNodeStateMachineTransition_u1fj0"), "RESET", "arrive", SubResource("AnimationNodeStateMachineTransition_emfxe"), "arrive", "pulse", SubResource("AnimationNodeStateMachineTransition_8cuti"), "pulse", "attack", SubResource("AnimationNodeStateMachineTransition_bmtw7"), "attack", "pulse", SubResource("AnimationNodeStateMachineTransition_jru1c"), "hit", "pulse", SubResource("AnimationNodeStateMachineTransition_l8t4p")]

[node name="Boss" type="Node2D"]
script = ExtResource("1_emfxe")
lives = 2

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
scale = Vector2(1e-05, 1e-05)
texture = ExtResource("1_qg2l1")
offset = Vector2(0, -64)

[node name="HitBox" type="Area2D" parent="Visuals"]
collision_layer = 8
collision_mask = 4
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Visuals/HitBox"]
position = Vector2(0, -31)
shape = SubResource("CapsuleShape2D_qg2l1")

[node name="Shooter" parent="Visuals" instance=ExtResource("3_emfxe")]
position = Vector2(0, -31)
_speed = 200.0
_bullet_key = 3
_shoot_delay = 2.0

[node name="Trigger" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trigger"]
position = Vector2(-100, -368.5)
shape = SubResource("RectangleShape2D_qg2l1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_f2ymq")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
deterministic = false
tree_root = SubResource("AnimationNodeStateMachine_emfxe")
advance_expression_base_node = NodePath("..")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/on_trigger = false

[node name="ArriveSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_u1fj0")
volume_db = -10.0
area_mask = 97

[connection signal="area_entered" from="Visuals/HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="area_entered" from="Trigger" to="." method="_on_trigger_area_entered"]
